--- a/ProjetoDDDSimplificado/ProjetoDDDSimplificado.Data/ProjetoDDDSimplificado.Data.csproj
+++ b/ProjetoDDDSimplificado/ProjetoDDDSimplificado.Data/ProjetoDDDSimplificado.Data.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contexto\ProjetoDDDSimplificadoContext.cs" />
+    <Compile Include="EntityConfig\Clientes\ClienteConfiguration.cs" />
+    <Compile Include="EntityConfig\Produtos\ProdutoConfiguration.cs" />
     <Compile Include="Helpers\UnityOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Repository.cs" />
@@ -63,6 +66,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
