--- a/ProjetoDDDSimplificado/ProjetoDDDSimplificado.WebUI/ProjetoDDDSimplificado.WebUI.csproj
+++ b/ProjetoDDDSimplificado/ProjetoDDDSimplificado.WebUI/ProjetoDDDSimplificado.WebUI.csproj
@@ -187,6 +187,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Clientes\ClienteViewModel.cs" />
+    <Compile Include="ViewModels\Produtos\ProdutoViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -231,7 +233,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
